Tree and heap based problems